# hellooptix

./: .gitignore  CMakeLists.txt  README.md  config.h.in  hellooptix.sln  hellooptix.vcxproj  hellooptix.vcxproj.filters  hints.md
src/: camera.cpp  camera.h  cameraController.cpp  cameraController.h  cudaoutputbuffer.h  glfwindow.cpp  glfwindow.h  hellooptix.cu  main.cpp  nvrtchelpers.h  optixhelpers.h  optixmanager.cpp  optixmanager.h  optixtypes.h  optixwindow.cpp  optixwindow.h  program.cpp  program.h  trackballController.cpp  trackballController.h
src/assets/kernels/: hellooptix.cu  helpers.h  random.h  random2.h
src/assets/models/: cube.gltf  monkey.gltf  normal_tests.gltf  scene.gltf  test.models.blend  test.models2.blend  torus.gltf
src/assets/models/multi-texture/: multi_texture.gltf  multi_texture.mtl
src/geometry/: boundingbox.cpp  boundingbox.h  gltfloader.cpp  gltfloader.h  objloader.cpp  objloader.h  trianglemesh.cpp  trianglemesh.h
